--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <center>
         <h1>ShinyClan</h1>
         <p>How to Join the ShinyClan?</p> 
-        <p>Change your name to Shiny_"yor Name".</p>
+        <p>Change your name to Shiny_"your Name".</p>
         
         <iframe width="640" height="360" src="https://www.youtube.com/embed/pTwo1UXM0TI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
