--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         
         <iframe width="640" height="360" src="https://www.youtube.com/embed/pTwo1UXM0TI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
+        <p>Join our Discord</p>
+        <iframe src="https://discord.com/widget?id=954392022800793661&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
+        </iframe>
     </center>
     
 </body>
